@@ -305,7 +305,6 @@ gtk_source_completion_remove_provider
 gtk_source_completion_add_trigger
 gtk_source_completion_remove_trigger
 gtk_source_completion_get_active_trigger
-gtk_source_completion_trigger_event
 gtk_source_completion_finish
 gtk_source_completion_filter_proposals
 gtk_source_completion_set_active
@@ -425,7 +424,7 @@ gtk_source_completion_trigger_get_type
 GtkSourceCompletionTriggerKey
 GtkSourceCompletionTriggerKeyClass
 gtk_source_completion_trigger_key_new
-gtk_source_completion_trigger_key_set_acelerator
+gtk_source_completion_trigger_key_set_accelerator
 <SUBSECTION Standard>
 GTK_IS_SOURCE_COMPLETION_TRIGGER_KEY
 GTK_IS_SOURCE_COMPLETION_TRIGGER_KEY_CLASS
