@@ -1,5 +1,14 @@
 2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
+	* docs/reference/gtksourceview-2.0-sections.txt:
+	* gtksourceview/gtksourcecompletiontriggerkey.h:
+	* gtksourceview/gtksourcecompletionitem.c:
+	* gtksourceview/gtksourcecompletion.h:
+	* gtksourceview/gtksourcecompletioninfo.h:
+	Fixed doc warnings.
+
+2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
         * docs/reference/gtksourceview-2.0-sections.txt:
         Updated docs.
 
